...
                    'Entra',
                    style: TextStyle(color: surfaceVariantColor),
                  ),
                ),
                const SizedBox(height: 20),
                ElevatedButton(
                  key: const Key('welcome-registration-button'),
                  onPressed: () {
                    Navigator.pushNamed(context, REGISTRATION_ROUTE);
                  },
                  style: ButtonStyle(
                    backgroundColor: WidgetStateProperty.all(ghostColor),
                    shape: WidgetStateProperty.all<RoundedRectangleBorder>(
...
