...
                        ),
                      ],
                    ),
                    SizedBox(
                      width: double.infinity,
                      child: ElevatedButton(
                        key: const Key('login-submit-button'),
                        onPressed: () {
                          onLogin();
                        },
                        style: ButtonStyle(
                          backgroundColor: WidgetStateProperty.all(ghostColor),
                          shape: WidgetStateProperty.all<RoundedRectangleBorder>(
...
